refactor: 로또 생성 시 정렬이 아닌 로또 출력 시 정렬로 로직 수정