@@ -4,7 +4,6 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -82,7 +81,7 @@ public class LottoStatisticsTest {
 
     private WinningLottoHolder createLottoWinningMachine() {
         return WinningLottoHolder.drawWinningLotto(
-                Arrays.asList(1, 2, 3, 4, 5, 6),
+                List.of(1, 2, 3, 4, 5, 6),
                 7
         );
     }
@@ -95,18 +94,18 @@ public class LottoStatisticsTest {
     private User createUserLottosCaseA() {
         return User.provideLottos(
                 List.of(
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 7, 12, 13)), // 5등 (당첨 3개 + 보너스 1개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 4, 12, 13)), // 4등 (당첨 4개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 4, 7, 13)), // 4등 (당첨 4개 + 보너스 1개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 4, 5, 13)), // 3등 (당첨 5개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 4, 5, 7)), // 2등 (당첨 5개 + 보너스 1개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 4, 5, 6)) // 1등 (당첨 6개)
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
+                        Lotto.create(List.of(1, 2, 3, 7, 12, 13)), // 5등 (당첨 3개 + 보너스 1개)
+                        Lotto.create(List.of(1, 2, 3, 4, 12, 13)), // 4등 (당첨 4개)
+                        Lotto.create(List.of(1, 2, 3, 4, 7, 13)), // 4등 (당첨 4개 + 보너스 1개)
+                        Lotto.create(List.of(1, 2, 3, 4, 5, 13)), // 3등 (당첨 5개)
+                        Lotto.create(List.of(1, 2, 3, 4, 5, 7)), // 2등 (당첨 5개 + 보너스 1개)
+                        Lotto.create(List.of(1, 2, 3, 4, 5, 6)) // 1등 (당첨 6개)
                 )
         );
     }
@@ -119,23 +118,23 @@ public class LottoStatisticsTest {
     private User createUserLottosCaseB() {
         return User.provideLottos(
                 List.of(
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(8, 9, 10, 11, 12, 13)), // None
-                        Lotto.create(Arrays.asList(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
-                        Lotto.create(Arrays.asList(1, 2, 3, 7, 12, 13)) // 5등 (당첨 3개 + 보너스 1개)
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(8, 9, 10, 11, 12, 13)), // None
+                        Lotto.create(List.of(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
+                        Lotto.create(List.of(1, 2, 3, 11, 12, 13)), // 5등 (당첨 3개)
+                        Lotto.create(List.of(1, 2, 3, 7, 12, 13)) // 5등 (당첨 3개 + 보너스 1개)
                 )
         );
     }
@@ -148,14 +147,14 @@ public class LottoStatisticsTest {
     private User createUserLottosCaseC() {
         return User.provideLottos(
                 List.of(
-                        Lotto.create(Arrays.asList(8, 21, 23, 41, 42, 43)), // None
-                        Lotto.create(Arrays.asList(3, 5, 11, 16, 32, 38)), // None
-                        Lotto.create(Arrays.asList(7, 11, 16, 35, 36, 44)), // None
-                        Lotto.create(Arrays.asList(1, 8, 11, 31, 41, 42)), // None
-                        Lotto.create(Arrays.asList(13, 14, 16, 38, 42, 45)), // None
-                        Lotto.create(Arrays.asList(7, 11, 30, 40, 42, 43)), // None
-                        Lotto.create(Arrays.asList(2, 13, 22, 32, 38, 45)), // None
-                        Lotto.create(Arrays.asList(1, 3, 5, 14, 22, 45)) // 5등 (당첨 3개)
+                        Lotto.create(List.of(8, 21, 23, 41, 42, 43)), // None
+                        Lotto.create(List.of(3, 5, 11, 16, 32, 38)), // None
+                        Lotto.create(List.of(7, 11, 16, 35, 36, 44)), // None
+                        Lotto.create(List.of(1, 8, 11, 31, 41, 42)), // None
+                        Lotto.create(List.of(13, 14, 16, 38, 42, 45)), // None
+                        Lotto.create(List.of(7, 11, 30, 40, 42, 43)), // None
+                        Lotto.create(List.of(2, 13, 22, 32, 38, 45)), // None
+                        Lotto.create(List.of(1, 3, 5, 14, 22, 45)) // 5등 (당첨 3개)
                 )
         );
     }
