@@ -3,7 +3,6 @@ package lotto.domain;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static lotto.exception.ExceptionMessage.LottoMachineException.BONUS_NUMBER_MUST_BE_UNIQUE;
@@ -16,7 +15,7 @@ class WinningLottoHolderTest {
     @DisplayName("보너스 번호가 당첨 번호에 중복되면 예외가 발생한다")
     void throwExceptionByBonusNumberIsNotUnique() {
         // given
-        final List<Integer> winningNumbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        final List<Integer> winningNumbers = List.of(1, 2, 3, 4, 5, 6);
         final int bonusNumber = winningNumbers.get(0);
 
         // when - then
@@ -29,7 +28,7 @@ class WinningLottoHolderTest {
     @DisplayName("WinningLottoHolder를 생성한다")
     void success() {
         // given
-        final List<Integer> winningNumbers = Arrays.asList(1, 2, 3, 4, 5, 6);
+        final List<Integer> winningNumbers = List.of(1, 2, 3, 4, 5, 6);
         final int bonusNumber = 7;
 
         // when
